--- a/Prayu/users/templates/users/index.html
+++ b/Prayu/users/templates/users/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h3>Hello Users</h3>
-</body>
-</html>
+{% extends 'users/basic.html' %}
