--- a/Prayu/users/templates/users/index.html
+++ b/Prayu/users/templates/users/index.html
@@ -106,7 +106,7 @@ Prayu: An E-Pharmacy & Consulting Service
 			#wrapper {
 				height: 100%;
 				width: 100%;
-				min-height: 650px;
+				min-height: 500px;
 				min-width: 900px;
 				padding-top: 1px;
 			}
@@ -189,7 +189,7 @@ Prayu: An E-Pharmacy & Consulting Service
 		<div id="wrapper">
 			<div id="slider">
 
-				<div class="slide" style="background-image: url(https://cdn.pixabay.com/photo/2016/12/05/19/49/syringe-1884784_960_720.jpg);">
+				<div class="slide img-fluid" style="background-image: url(https://cdn.pixabay.com/photo/2016/12/05/19/49/syringe-1884784_960_720.jpg);">
 					<div class="slide-block">
 						<h4>Medicines</h4>
 						<p>Heading south to avoid a bad case of global frostbite, a group of migrating misfit creatures embark on a hilarious quest to reunite a human baby with his tribe.</p>
@@ -197,7 +197,7 @@ Prayu: An E-Pharmacy & Consulting Service
 					</div>
 				</div>
 
-				<div class="slide" style="background-image: url(https://cdn.pixabay.com/photo/2017/03/14/03/20/nurse-2141808_960_720.jpg);">
+				<div class="slide img-fluid" style="background-image: url(https://cdn.pixabay.com/photo/2017/03/14/03/20/nurse-2141808_960_720.jpg);">
 					<div class="slide-block">
 						<h4>Doctors</h4>
 						<p>For the Birds is an animated short film, produced by Pixar Animation Studios released in 2000. It is shown in a theatrical release of the 2001 Pixar feature film Monsters, Inc.</p>
@@ -205,7 +205,7 @@ Prayu: An E-Pharmacy & Consulting Service
 					</div>
 				</div>
 
-				<div class="slide" style="background-image: url(https://cdn.pixabay.com/photo/2015/05/15/05/31/night-view-767852_960_720.jpg);">
+				<div class="slide img-fluid" style="background-image: url(https://cdn.pixabay.com/photo/2015/05/15/05/31/night-view-767852_960_720.jpg);">
 					<div class="slide-block">
 						<h4>Hospitals</h4>
 						<p>A comedy adventure in which 78-year-old Carl Fredricksen fulfills his dream of a great adventure when he ties thousands of balloons to his house and flies away to the wilds of South America.</p>
@@ -214,5 +214,137 @@ Prayu: An E-Pharmacy & Consulting Service
 				</div>
 			</div>
 		</div>
-		<div class="container" style="background-color:red;"><h3>Helllo</h3></div>
+		 <!-- About Section-->
+    <section class="intro">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8">
+            <h2 class="h3">About Us</h2>
+			  <p class="text-big"><strong>Prayu </strong>brings to you an online platform which can be accessed for all your health needs. We are trying to make healthcare a <strong>hassle-free experience</strong> for you. This project is for Vth semester end.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+	    <section class="featured-posts no-padding-top">
+      <div class="container">
+		  <h2 class="h3">Our Services</h2>
+        <!-- Post-->
+        <div class="row d-flex align-items-stretch">
+          <div class="text col-lg-7">
+            <div class="text-inner d-flex align-items-center">
+              <div class="content">
+                <header class="post-header">
+					<h2 class="h4"><a href="#">Medicines</h2></a>
+                  <div class="category">Get your Medicines at your Doorstep</div>
+                </header>
+                <p>without showing their identity to the world. This websites give you a platform to write a blog on different different topic and share to the world without any concern.</p>
+                <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
+                    <div class="title"><span>Publish Date</span></div></a>
+                  <div class="date"><i class="icon-clock"></i>1234</div>
+                  <div class="comments"><i class="icon-comment"></i></div>
+                </footer>
+              </div>
+            </div>
+          </div>
+          <div class="image col-lg-5"><img src="https://cdn.pixabay.com/photo/2012/12/21/10/06/addiction-71573_960_720.jpg" alt="..."></div>
+        </div>
+        <!-- Post        -->
+        <div class="row d-flex align-items-stretch">
+          <div class="image col-lg-5"><img src="https://cdn.pixabay.com/photo/2017/01/29/21/16/nurse-2019420_960_720.jpg"></div>
+          <div class="text col-lg-7">
+            <div class="text-inner d-flex align-items-center">
+              <div class="content">
+                <header class="post-header">
+					<h2 class="h4"><a href="#">Doctor</h2></a>
+                  <div class="category">Connect with our Doctor within a min</div>
+                </header>
+                <p>without showing their identity to the world. This websites give you a platform to write a blog on different different topic and share to the</p>
+                <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
+                    <div class="title"><span>Publish Date</span></div></a>
+                  <div class="date"><i class="icon-clock"></i>{{items.postdate}}</div>
+                  <div class="comments"><i class="icon-comment"></i></div>
+                </footer>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex align-items-stretch">
+          <div class="text col-lg-7">
+            <div class="text-inner d-flex align-items-center">
+              <div class="content">
+                <header class="post-header">
+					<h2 class="h4"><a href="#">Hospitals</h2></a>
+                  <div class="category">Search for top Hospitals near by you</div>
+                </header>
+                <p>without showing their identity to the world. This websites give you a platform to write a blog on different different topic and share t</p>
+                <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
+                    <div class="title"><span>Publish Date</span></div></a>
+                  <div class="date"><i class="icon-clock"></i>{{items.postdate}}</div>
+                  <div class="comments"><i class="icon-comment"></i></div>
+                </footer>
+              </div>
+            </div>
+          </div>
+          <div class="image col-lg-5"><img src="https://cdn.pixabay.com/photo/2016/11/14/03/05/surgery-1822458_960_720.jpg"></div>
+        </div>
+        <!-- Post                            -->
+	  </div>
+    </section>
+	<!-- Divider Section-->
+    <section style="background: url(https://cdn.pixabay.com/photo/2015/03/26/09/44/cell-phone-690192_960_720.jpg); background-size: cover; background-position: center center" class="divider">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-7">
+            <h2>Have any Queries?<br>Feel free to connect with us... </h2>CLICK <a href="#" class="hero-link">here to connect.</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Latest Blogs -->
+    <section class="latest-posts">
+      <div class="container">
+        <header>
+          <h2>Blog's You May Like</h2>
+          <p class="text-big"></p>
+        </header>
+        <div class="row">
+          <div class="post col-md-4" style="border:1px solid lightgrey">
+            <div class="post-thumbnail"><img src="https://cdn.pixabay.com/photo/2018/05/26/10/54/strawberries-3431122_960_720.jpg" alt="..." class="img-fluid"></div>
+            <div class="post-details">
+              <div class="post-meta d-flex justify-content-between">
+                <div class="date">Publis Date | {{items.postdate}}</div>
+                <div class="category">{{items.category}}</div>
+              </div>
+                <h3 class="h4">Healthy foods</h3>
+              <p class="text-muted">Eating a healthy diet that includes lots of fruit, vegetables, whole grains and a moderate amount of unsaturated fats, meat and dairy can help you maintain a steady weight. Having a good variety of these foods every day leaves less room for foods that are high in fat and sugar - a leading cause of weight gain.</p>
+            </div>
+            <a href="http://127.0.0.1:8000/ptech/blogview/6" class="pull-right"><button type="button" class="btn btn-outline-primary btn-sm icon-arrow-right">Read More <i class="fa fa-arrow-right"></i></button></a><br/>
+          </div>
+          <div class="post col-md-4" style="border:1px solid lightgrey">
+            <div class="post-thumbnail"><img src="https://cdn.pixabay.com/photo/2015/01/10/17/32/physiotherapy-595529_960_720.jpg" alt="..." class="img-fluid"></div>
+            <div class="post-details">
+              <div class="post-meta d-flex justify-content-between">
+                <div class="date">Publis Date | {{items.postdate}}</div>
+                <div class="category">{{items.category}}</div>
+              </div>
+                <h3 class="h4">Workout Benifits</h3>
+              <p class="text-muted">We have all heard it many times before - regular exercise is good for you, and it can help you lose weight. But if you are like many Americans, you are busy, you have a sedentary job, and you haven't yet changed your exercise habits. The good news is that it's never too late to start....</p>
+            </div>
+            <a href="http://127.0.0.1:8000/ptech/blogview/12" class="pull-right"><button type="button" class="btn btn-outline-primary btn-sm icon-arrow-right">Read More <i class="fa fa-arrow-right"></i></button></a><br/>
+          </div>
+          <div class="post col-md-4" style="border:1px solid lightgrey">
+            <div class="post-thumbnail"><img src="https://cdn.pixabay.com/photo/2014/12/20/09/18/running-573762_960_720.jpg" alt="..." class="img-fluid"></div>
+            <div class="post-details">
+              <div class="post-meta d-flex justify-content-between">
+                <div class="date">Publis Date | {{items.postdate}}</div>
+                <div class="category">{{items.category}}</div>
+              </div>
+                <h3 class="h4">Jogging and Running</h3>
+              <p class="text-muted">The difference between running and jogging is intensity. Running is faster, uses more kilojoules and demands more effort from the heart, lungs and muscles than jogging. Running requires a higher level of overall fitness than jogging....</p>
+            </div>
+            <a href="http://127.0.0.1:8000/ptech/blogview/4" class="pull-right"><button type="button" class="btn btn-outline-primary btn-sm icon-arrow-right">Read More <i class="fa fa-arrow-right"></i></button></a><br/>
+          </div>
+          </div>
+      </div>
+    </section>
 {% endblock %}
