--- a/Prayu/users/templates/users/basic.html
+++ b/Prayu/users/templates/users/basic.html
@@ -81,10 +81,10 @@ p
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href='#' style="color: white;">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href='users/' style="color: white;">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/ptech/about" style="color: white;">Medicines</a>
+        <a class="nav-link" href="/users/medicines" style="color: white;">Medicines</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#" style="color: white;">Doctors</a>
