Working on Cart

--- a/Prayu/users/templates/users/basic.html
+++ b/Prayu/users/templates/users/basic.html
@@ -64,13 +64,37 @@ p
     border-top:1px solid rgba(255,255,255,.1);
 }
 }
+.btn {
+  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  font-weight: 700;
+}
+
+.btn-xl {
+  font-size: 18px;
+  padding: 8px 20px;
+}
+
+.btn-primary {
+  background-color: rgba(0,147,255);
+  border-color: white;
+}
+
+.btn-primary:active, .btn-primary:focus, .btn-primary:hover {
+  background-color: black !important;
+  border-color: rgba(0,147,255) !important;
+  color: white;
+}
+
+.btn-primary:active, .btn-primary:focus {
+  box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
+}
 {% block css %}{% endblock %}
 </style>
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
   {% load static %}
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: black">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: black;">
   <a class="navbar-brand" href="#">
     <img src="{% static 'users/logo.png'%}" width="130" height="60" alt="" style="padding:0px; margin:-10px;">
   </a>
@@ -81,19 +105,16 @@ p
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href='users/' style="color: white;">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href='/users' style="color: white;">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/users/medicines" style="color: white;">Medicines</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" style="color: white;">Doctors</a>
+        <a class="nav-link" href="/users/doctors" style="color: white;">Doctors</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/ptech/ablog" style="color: white;">Hospitals</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/ptech/ablog" style="color: white;">About Us</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/ptech/ablog" style="color: white;">Contact Us</a>
@@ -110,6 +131,11 @@ p
         </div>
       </li>
     </ul>
+     <div class="float-right">
+<a href="#">
+          <i class="fa fa-shopping-cart fa-2x" style="color:white;"></i>   <span id="cart" class="badge badge-light" style="">0</span>
+        </a>
+      </div>
   </div>
 </nav>
 
@@ -157,7 +183,8 @@ p
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    {% block js %}
+
+  {% block js %}
     {% endblock %}
   </body>
 </html>
