--- a/Prayu/users/templates/users/medicines.html
+++ b/Prayu/users/templates/users/medicines.html
@@ -4,12 +4,6 @@
 {% endblock %}
 
 
-{% block js %}
-{% load static %}
-
-{% endblock %}
-
-
 {% block css%}
 header.masthead {
   text-align: center;
@@ -57,31 +51,6 @@ header.masthead .intro-text .intro-heading {
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
 }
-.btn {
-  font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  font-weight: 700;
-}
-
-.btn-xl {
-  font-size: 18px;
-  padding: 8px 20px;
-}
-
-.btn-primary {
-  background-color: rgba(0,147,255);
-  border-color: white;
-}
-
-.btn-primary:active, .btn-primary:focus, .btn-primary:hover {
-  background-color: black !important;
-  border-color: rgba(0,147,255) !important;
-  color: white;
-}
-
-.btn-primary:active, .btn-primary:focus {
-  box-shadow: 0 0 0 0.2rem rgba(254, 209, 55, 0.5) !important;
-}
-
 .has-search .form-control {
   padding-left: 2.375rem;
 }
@@ -96,6 +65,42 @@ header.masthead .intro-text .intro-heading {
   text-align: center;
   pointer-events: none;
   color: #aaa;
+}
+
+.col-md-3
+{
+display: inline-block;
+margin-left:-4px;
+}
+.carousel-indicators .active {
+background-color: blue;
+}
+.col-md-3 img{
+width:200px;
+height:250px;
+}
+body .carousel-indicator li{
+background-color: blue;
+}
+body .carousel-indicators{
+bottom: -40px;
+}
+.carousel-indicators li{
+background-color: grey;
+}
+body .carousel-control-prev-icon,
+body .carousel-control-next-icon{
+background-color: blue;
+}
+.carousel-control-prev,
+.carousel-control-next{
+top: auto;
+bottom: auto;
+padding-top: 184px;
+}
+body .no-padding{
+padding-left: 0,
+padding-right: 0;
 }
 {% endblock %}
 
@@ -140,12 +145,12 @@ header.masthead .intro-text .intro-heading {
                         <div class="card align-items-center" style="width: 18r">
                             <img src='/media/{{i.image}}' class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title" id="namepr{{i.id}}">{{i.product_name}}</h5>
+                                <h5 class="card-title" id="namepr{{i.product_id}}">{{i.product_name}}</h5>
                                 <p class="card-text">{{i.desc|slice:"0:50"}}...</p>
-                                <h5 class="card-title">Rs. <span id="pricepr{{i.id}}">{{i.price}}</span></h5>
-                                <span id="divpr{{i.id}}" class="divpr">
-                                    <button id="pr{{i.id}}" class="btn btn-primary cart">Add To Cart</button></span>
-                                <a href="/pshop/prodview/{{i.id}}"><button id="qv{{i.id}}" class="btn btn-primary cart">View</button></a>
+                                <h5 class="card-title">Rs. <span id="pricepr{{i.product_id}}">{{i.price}}</span></h5>
+                                <span id="divpr{{i.product_id}}" class="divpr">
+                                    <button id="pr{{i.product_id}}" class="btn btn-primary cart">Add To Cart</button></span>
+                                <a href="/medicines/prodview/{{i.product_id}}"><button id="qv{{i.product_id}}" class="btn btn-primary cart">View</button></a>
                             </div>
                         </div>
                     </div>
@@ -167,4 +172,68 @@ header.masthead .intro-text .intro-heading {
     </div>
     {% endfor%}
 </div>
+
+{% endblock %}
+{% block js%}
+<script>
+	// find out the cart items from local storage
+	if (localStorage.getItem('cart') == null) {
+	    var cart = {};
+	} else {
+	    cart = JSON.parse(localStorage.getItem('cart'));
+	    localStorage.setItem('cart', JSON.stringify(cart));
+	    updateCart(cart);
+	}
+
+	// If the  add to cart button is clicked, add/inc the item
+	// $('.cart').click(function()
+	$('.divpr').on("click", "button.cart", function() {
+	    var idstr = this.id.toString();
+	    console.log(idstr);
+	    if (cart[idstr] != undefined) {
+	        Qty = cart[idstr][0] + 1;
+	    } else {
+	        Qty = 1;
+	        name = document.getElementById('name' + idstr).innerHTML;
+	        price = document.getElementById('price' + idstr).innerHTML;
+	        cart[idstr] = [Qty, name, parseInt(price)];
+	    }
+	    updateCart(cart);
+	    console.log(cart);
+
+	});
+
+	function updateCart(cart) {
+	    var sum = 0;
+	    for (var item in cart) {
+	        sum = sum + cart[item][0];
+	        document.getElementById('div' + item).innerHTML = "<button id='minus" + item + "' class='btn btn-primary minus'>-</button><span id='val" + item + "''>" + cart[item][0] + "</span> <button id='plus" + item + "' class='btn btn-primary plus'> + </button>";
+	    }
+	    localStorage.setItem('cart', JSON.stringify(cart));
+	    document.getElementById('cart').innerHTML = sum;
+	}
+	// If plus or minus button is clicked , change the Cart as well as the display value
+	$('.divpr').on("click", "button.minus", function() {
+	    a = this.id.slice(7, );
+	    // console.log(a);
+	    cart['pr' + a][0] = cart['pr' + a][0] - 1;
+	    cart['pr' + a][0] = Math.max(0, cart['pr' + a][0]);
+	    // document.getElementById('valpr'+ a).innerHTML = cart['pr' + a][0];
+	    if (cart['pr' + a][0] == 0) {
+	        document.getElementById('divpr' + a).innerHTML = '<button id="pr' + a + '" class="btn btn-primary cart">Add To Cart</button>';
+	        delete cart['pr' + a];
+	    } else {
+	        document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+	    }
+	    updateCart(cart);
+	});
+
+	$('.divpr').on("click", "button.plus", function() {
+	    a = this.id.slice(6, );
+	    // console.log(a);
+	    cart['pr' + a][0] = cart['pr' + a][0] + 1;
+	    document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+	    updateCart(cart);
+	});
+</script>
 {% endblock %}
