Added View Cart Page

--- a/Prayu/users/templates/users/basic.html
+++ b/Prayu/users/templates/users/basic.html
@@ -132,7 +132,7 @@ p
       </li>
     </ul>
      <div class="float-right">
-<a href="#">
+<a href="/users/viewcart">
           <i class="fa fa-shopping-cart fa-2x" style="color:white;"></i>   <span id="cart" class="badge badge-light" style="">0</span>
         </a>
       </div>
