--- a/Prayu/users/templates/users/viewcart.html
+++ b/Prayu/users/templates/users/viewcart.html
@@ -1,1 +1,175 @@
 {% extends 'users/basic.html' %}
+
+{% block css %}
+body
+{
+    background-color:#edebe8;
+}
+.layout
+{
+    background-color:white;
+    border:1px solid lightgrey;
+    box-shadow: 2px 2px 2px 2px #888888;
+}
+
+hr.style14 {
+  border: 0;
+  height: 1px;
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+}
+
+hr.style3 {
+	border-top: 1px dashed #8c8b8b;
+}
+
+hr.style13 {
+	height: 10px;
+	border: 0;
+	box-shadow: 0 10px 10px -10px #8c8b8b inset;
+}
+#viewcart
+{
+    padding:10px;
+}
+#cartitem
+{
+    background-color: ;
+    border:1px black;
+}
+{% endblock %}
+
+{% block body %}
+<div class="container-fluid">
+    <div class="row" id="viewcart">
+        <div class="col-sm-8 layout">
+            <div class="container" id="cartitem">
+                <div class="row">
+                    <div class="container my-2"><h4>My Cart</h4><hr class="style14"></div>
+                </div>
+                <div class="container-fluid" id="proddetail">
+                </div>
+                <div class="container" id="canclebtn"></div>
+            </div>
+        </div>
+    <div class="col-sm-4" style="background-color:;" id="priceinfo">
+        <div class="container layout"  id="pricedetail">
+            <div class="row">
+                <div class="container my-2"><h4>Price Detail</h4><hr class="style14"></div>
+            </div>
+            <div class="row">
+                    <div class="col-sm-8">
+                        MRP Total:<br/>
+                        Discount(You Save): <br/>
+                        Shipping Charge:<br/>
+                    </div>
+                    <div class="col-sm-4">
+                        <h6 id="allmrp"></h6>
+                        <span id="discount"></span><br/>
+                        <span>Free</span>
+                    </div>
+            </div>
+            <div class="row">
+                <div class="container-fluid">
+                <hr class="style3">
+                    <div class="row">
+                        <div class="col-sm-8"><h6>Total Payable:</h6></div>
+                        <div class="col-sm-4"><h6 id="allprice"></h6></div>
+                    </div>
+                <hr class="style3">
+                    <div class="container">
+                        <button class="btn btn-danger my-2">Cancle</button>
+                        <button class="btn btn-success my-2">Checkout</button>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</div>
+{% for i in product %}
+{% endfor %}
+{% endblock %}
+
+{% block js %}
+<script>
+	if (localStorage.getItem('cart') == null) {
+	    var cart = {};
+	} else {
+	    cart = JSON.parse(localStorage.getItem('cart'));
+	    localStorage.setItem('cart', JSON.stringify(cart));
+	}
+
+
+
+	function clearCart() {
+	    console.log("hello");
+	    cart = JSON.parse(localStorage.getItem('cart'));
+	    localStorage.clear();
+	    cart = {};
+	    location.reload();
+	}
+
+
+	var sum=0;
+	var allprice=0;
+	var allmrp=0;
+	 console.log(cart);
+	 if ($.isEmptyObject(cart))
+	 {
+	     // If cart is empty
+	      mystr = ` <div class="row">
+	                    <div class="alert alert-danger mx-auto" role="alert">
+                        Oops!! There is no Item in your cart. <a href="/users/medicines" class="alert-link">Click here</a> to find your medicines.
+                        </div>
+                    </div>`
+        $('#proddetail').append(mystr);
+	 }
+	 else
+	 {
+	    // if cart has atleast one items
+	 for(item in cart)
+	 {
+	    let name = cart[item][1];
+	    let qty = cart[item][0];
+	    let price = cart[item][2]*qty;
+	    let mrp = cart[item][3]*qty;
+	    allprice +=price;
+	    allmrp +=mrp;
+	    let comp = cart[item][4];
+	    let discount = allmrp-allprice;
+	    sum +=qty;
+	   mystr = ` <div class="row" >
+                        <div class="col-sm-3"><img src="https://rukminim1.flixcart.com/image/120/120/jws547k0/wallet-card-wallet/3/u/d/casual-brownnn-41-wallet-fns-original-imafhd9v8u6nqtgw.jpeg?q=90"></div>
+                        <div class="col-sm-6"><h6>${name}</h6><p>${comp}</p></div>
+                        <div class="col-sm-3"><h6>₹ ${price}</h6></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3"><span id="divpr{{i.product_id}}" class="divpr">
+                                    <button id="pr{{i.product_id}}" class="btn btn-primary cart">Add To Cart</button></span></div>
+                        <div class="col-sm-9"><a href=""><i class="fa fa-trash-o fa-2x" aria-hidden="true"></i></a></div>
+                    </div><hr class="style13">`
+        $('#proddetail').append(mystr);
+        document.getElementById('allmrp').innerHTML = "₹ "+allmrp;
+        document.getElementById('discount').innerHTML = "<span style='color:green'>- ₹ "+discount+"</span>";
+        document.getElementById('allprice').innerHTML = "₹ "+allprice;
+	 }
+	 }
+	 if($.isEmptyObject(cart))
+	 {
+        document.getElementById("priceinfo").style.display = "none";
+	 }
+	 else
+	 {
+	    	            canclebtn =`<button class="btn btn-danger mb-2" onclick="clearCart()">Remove all Items</button>`
+        $('#canclebtn').append(canclebtn);
+
+	 }
+	 document.getElementById('cart').innerHTML = sum;
+
+
+</script>
+{% endblock %}
