adding product view page

--- a/Prayu/users/templates/users/medicines.html
+++ b/Prayu/users/templates/users/medicines.html
@@ -151,7 +151,7 @@ padding-right: 0;
                                 <h5 class="card-title">₹ <span id="pricepr{{i.product_id}}">{{i.sallingprice}}</span></h5>
                                 <span id="divpr{{i.product_id}}" class="divpr">
                                     <button id="pr{{i.product_id}}" class="btn btn-primary cart">Add To Cart</button></span>
-                                <a href="/medicines/prodview/{{i.product_id}}"><button id="qv{{i.product_id}}" class="btn btn-primary cart">View</button></a>
+                                <a href="/users/prodview/{{i.product_id}}"><button id="qv{{i.product_id}}" class="btn btn-primary cart">View</button></a>
                             </div>
                         </div>
                     </div>
