--- a/Prayu/users/templates/users/viewcart.html
+++ b/Prayu/users/templates/users/viewcart.html
@@ -123,7 +123,7 @@ hr.style13 {
 	     // If cart is empty
 	      mystr = ` <div class="row">
 	                    <div class="alert alert-danger mx-auto" role="alert">
-                        Oops!! There is no Item in your cart. <a href="/users/medicines" class="alert-link">Click here</a> to find your medicines.
+                        Ops!! Your Cart is empty. <a href="/users/medicines" class="alert-link">Click here</a> to find your medicines.
                         </div>
                     </div>`
         $('#proddetail').append(mystr);
