Adding Contact Page and  COntact Model

--- a/Prayu/users/templates/users/basic.html
+++ b/Prayu/users/templates/users/basic.html
@@ -117,7 +117,7 @@ p
         <a class="nav-link" href="/ptech/ablog" style="color: white;">Hospitals</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/ptech/ablog" style="color: white;">Contact Us</a>
+        <a class="nav-link" href="/users/contact" style="color: white;">Contact Us</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
