Added search features for products

--- a/Prayu/users/templates/users/index.html
+++ b/Prayu/users/templates/users/index.html
@@ -296,7 +296,7 @@ Prayu: An E-Pharmacy & Consulting Service
       <div class="container">
         <div class="row">
           <div class="col-md-7">
-            <h2>Have any Queries?<br>Feel free to connect with us... </h2>CLICK <a href="#" class="hero-link">here to connect.</a>
+            <h2>Have any Queries?<br>Feel free to connect with us... </h2>CLICK <a href="http://127.0.0.1:8000/users/contact/" class="hero-link">here to connect.</a>
           </div>
         </div>
       </div>
