Addind Doctor module and Dashboard with login registration and updation of doctors profile

--- a/Prayu/users/static/users/css/main.css
+++ b/Prayu/users/static/users/css/main.css
@@ -188,7 +188,7 @@ iframe {
   display: block;
   font-family: Montserrat-ExtraBold;
   font-size: 24px;
-  color: #333333;
+  color: white;
   line-height: 1.2;
   text-align: center;
   padding-bottom: 44px;
