--- a/Prayu/users/templates/users/search.html
+++ b/Prayu/users/templates/users/search.html
@@ -110,18 +110,16 @@ padding-right: 0;
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Search your Medicines Here!</div>
-         <form action="#" method="get">
+         <form action="/users/search/" method="get">
              <center>
              <div class="main col-sm-6">
               <!-- Actual search box -->
-              <form method="get" action="/users/search/">
               <div class="form-group has-search">
                 <span class="fa fa-search form-control-feedback"></span>
                 <input type="text" class="form-control" placeholder="Write here..." name="search" id="search">
                   <br/>
                   <input type="submit" class="btn btn-primary" value="Search">
               </div>
-              </form>
              </div>
              </center>
          </form>
@@ -184,67 +182,67 @@ padding-right: 0;
     alert('{{msg}}');
     window.location.href = "/"
     { % endif % }
-	// find out the cart items from local storage
-	if (localStorage.getItem('cart') == null) {
-	    var cart = {};
-	} else {
-	    cart = JSON.parse(localStorage.getItem('cart'));
-	    localStorage.setItem('cart', JSON.stringify(cart));
-	    updateCart(cart);
-	}
+  // find out the cart items from local storage
+  if (localStorage.getItem('cart') == null) {
+      var cart = {};
+  } else {
+      cart = JSON.parse(localStorage.getItem('cart'));
+      localStorage.setItem('cart', JSON.stringify(cart));
+      updateCart(cart);
+  }
 
-	// If the  add to cart button is clicked, add/inc the item
-	// $('.cart').click(function()
-	$('.divpr').on("click", "button.cart", function() {
-	    var idstr = this.id.toString();
-	    console.log(idstr);
-	    if (cart[idstr] != undefined) {
-	        Qty = cart[idstr][0] + 1;
-	    } else {
-	        Qty = 1;
-	        name = document.getElementById('name' + idstr).innerHTML;
-	        price = document.getElementById('price' + idstr).innerHTML;
-	        mrp = document.getElementById('mrp' + idstr).innerHTML;
-	        company = document.getElementById('company' + idstr).innerHTML;
-	        image = document.getElementById('image' + idstr).innerHTML;
-	        cart[idstr] = [Qty, name, parseInt(price),parseInt(mrp), company, image];
-	    }
-	    updateCart(cart);
-	    console.log(cart);
+  // If the  add to cart button is clicked, add/inc the item
+  // $('.cart').click(function()
+  $('.divpr').on("click", "button.cart", function() {
+      var idstr = this.id.toString();
+      //console.log(idstr);
+      if (cart[idstr] != undefined) {
+          Qty = cart[idstr][0] + 1;
+      } else {
+          Qty = 1;
+          name = document.getElementById('name' + idstr).innerHTML;
+          price = document.getElementById('price' + idstr).innerHTML;
+          mrp = document.getElementById('mrp' + idstr).innerHTML;
+          company = document.getElementById('company' + idstr).innerHTML;
+          image = document.getElementById('image' + idstr).src;
+          console.log(image);
+          cart[idstr] = [Qty, name, parseInt(price),parseInt(mrp), company, image];
+      }
+      updateCart(cart);
 
-	});
+  });
 
-	function updateCart(cart) {
-	    var sum = 0;
-	    for (var item in cart) {
-	        sum = sum + cart[item][0];
-	        document.getElementById('div' + item).innerHTML = "<button id='minus" + item + "' class='btn btn-primary minus'>-</button><span id='val" + item + "''>" + cart[item][0] + "</span> <button id='plus" + item + "' class='btn btn-primary plus'> + </button>";
-	    }
-	    localStorage.setItem('cart', JSON.stringify(cart));
-	    document.getElementById('cart').innerHTML = sum;
-	}
-	// If plus or minus button is clicked , change the Cart as well as the display value
-	$('.divpr').on("click", "button.minus", function() {
-	    a = this.id.slice(7, );
-	    // console.log(a);
-	    cart['pr' + a][0] = cart['pr' + a][0] - 1;
-	    cart['pr' + a][0] = Math.max(0, cart['pr' + a][0]);
-	    // document.getElementById('valpr'+ a).innerHTML = cart['pr' + a][0];
-	    if (cart['pr' + a][0] == 0) {
-	        document.getElementById('divpr' + a).innerHTML = '<button id="pr' + a + '" class="btn btn-primary cart">Add To Cart</button>';
-	        delete cart['pr' + a];
-	    } else {
-	        document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
-	    }
-	    updateCart(cart);
-	});
+  function updateCart(cart) {
+      var sum = 0;
+      for (var item in cart) {
+          sum = sum + cart[item][0];
+          document.getElementById('div' + item).innerHTML = "<button id='minus" + item + "' class='btn btn-primary minus'>-</button><span id='val" + item + "''>" + cart[item][0] + "</span> <button id='plus" + item + "' class='btn btn-primary plus'> + </button>";
+      }
+      localStorage.setItem('cart', JSON.stringify(cart));
+      document.getElementById('cart').innerHTML = sum;
+  }
+  // If plus or minus button is clicked , change the Cart as well as the display value
+  $('.divpr').on("click", "button.minus", function() {
+      a = this.id.slice(7, );
+      // console.log(a);
+      cart['pr' + a][0] = cart['pr' + a][0] - 1;
+      cart['pr' + a][0] = Math.max(0, cart['pr' + a][0]);
+      // document.getElementById('valpr'+ a).innerHTML = cart['pr' + a][0];
+      if (cart['pr' + a][0] == 0) {
+          document.getElementById('divpr' + a).innerHTML = '<button id="pr' + a + '" class="btn btn-primary cart">Add To Cart</button>';
+          delete cart['pr' + a];
+      } else {
+          document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+      }
+      updateCart(cart);
+  });
 
-	$('.divpr').on("click", "button.plus", function() {
-	    a = this.id.slice(6, );
-	    // console.log(a);
-	    cart['pr' + a][0] = cart['pr' + a][0] + 1;
-	    document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
-	    updateCart(cart);
-	});
+  $('.divpr').on("click", "button.plus", function() {
+      a = this.id.slice(6, );
+      // console.log(a);
+      cart['pr' + a][0] = cart['pr' + a][0] + 1;
+      document.getElementById('valpr' + a).innerHTML = cart['pr' + a][0];
+      updateCart(cart);
+  });
 </script>
 {% endblock %}
