--- a/Prayu/users/templates/users/basic.html
+++ b/Prayu/users/templates/users/basic.html
@@ -121,11 +121,11 @@ p
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          ABlog
+          Other
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/ptech/whyablog">Why ABlog?</a>
-          <a class="dropdown-item" href="/ptech/allablog">All ABlog's</a>
+          <a class="dropdown-item" href="{% url 'tracker'%}">Track order</a>
+          <a class="dropdown-item" href="/ptech/allablog">Blog's</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="/ptech/postblog">Post ABlog's</a>
         </div>
@@ -180,7 +180,9 @@ p
 </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   {% block js %}
