Fixing Bugs in Doctor Module and in Paytm Payment gateway

--- a/Prayu/users/templates/users/doctors.html
+++ b/Prayu/users/templates/users/doctors.html
@@ -1,4 +1,7 @@
 {% extends 'users/basic.html' %}
 {% block body %}
-hello {{user.email}}
+hi
+{% for product in Product %}
+hello {{product.0.category}}
+{% endfor %}
 {% endblock %}
