--- a/Prayu/users/templates/users/index.html
+++ b/Prayu/users/templates/users/index.html
@@ -193,7 +193,8 @@ Prayu: An E-Pharmacy & Consulting Service
 				<div class="slide img-fluid" style="background-image: url(https://cdn.pixabay.com/photo/2016/12/05/19/49/syringe-1884784_960_720.jpg);">
 					<div class="slide-block">
 						<h4>Medicines</h4>
-						<p>Heading south to avoid a bad case of global frostbite, a group of migrating misfit creatures embark on a hilarious quest to reunite a human baby with his tribe.</p>
+						<p>Order medicines and health products online and get it delivered
+at home from licensed pharmacies at lower cost.</p>
 						<button type="button" class="btn btn-primary btn3d my-3">Shop Now</button>
 					</div>
 				</div>
@@ -201,7 +202,7 @@ Prayu: An E-Pharmacy & Consulting Service
 				<div class="slide img-fluid" style="background-image: url(https://cdn.pixabay.com/photo/2017/03/14/03/20/nurse-2141808_960_720.jpg);">
 					<div class="slide-block">
 						<h4>Doctors</h4>
-						<p>For the Birds is an animated short film, produced by Pixar Animation Studios released in 2000. It is shown in a theatrical release of the 2001 Pixar feature film Monsters, Inc.</p>
+						<p>You can find the top best doctors online. And consult with doctor on single click button. You can also find your doctor on the basis of your dieseis and also near by your locations.</p>
 						<button type="button" class="btn btn-primary btn3d my-3">Search for Doctor</button>
 					</div>
 				</div>
@@ -209,7 +210,7 @@ Prayu: An E-Pharmacy & Consulting Service
 				<div class="slide img-fluid" style="background-image: url(https://cdn.pixabay.com/photo/2015/05/15/05/31/night-view-767852_960_720.jpg);">
 					<div class="slide-block">
 						<h4>Hospitals</h4>
-						<p>A comedy adventure in which 78-year-old Carl Fredricksen fulfills his dream of a great adventure when he ties thousands of balloons to his house and flies away to the wilds of South America.</p>
+						<p>Find the best hospiatals near your city and get full details of that hospiatls online... like how many specialities doctors available, 24x7 Emergencies servie and ambulance service.</p>
 						<button type="button" class="btn btn-primary btn3d my-3">Search for Hospitals</button>
 					</div>
 				</div>
@@ -238,7 +239,8 @@ Prayu: An E-Pharmacy & Consulting Service
 					<h2 class="h4"><a href="#">Medicines</h2></a>
                   <div class="category">Get your Medicines at your Doorstep</div>
                 </header>
-                <p>without showing their identity to the world. This websites give you a platform to write a blog on different different topic and share to the world without any concern.</p>
+                <p>Order medicines and health products online and get it delivered
+at home from licensed pharmacies</p>
                 <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
                     <div class="title"><span>Publish Date</span></div></a>
                   <div class="date"><i class="icon-clock"></i>1234</div>
@@ -259,7 +261,7 @@ Prayu: An E-Pharmacy & Consulting Service
 					<h2 class="h4"><a href="#">Doctor</h2></a>
                   <div class="category">Connect with our Doctor within a min</div>
                 </header>
-                <p>without showing their identity to the world. This websites give you a platform to write a blog on different different topic and share to the</p>
+                <p>You can find the top best doctors online. And consult with doctor on single click button. You can also find your doctor on the basis of your dieseis and also near by your locations.</p>
                 <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
                     <div class="title"><span>Publish Date</span></div></a>
                   <div class="date"><i class="icon-clock"></i>{{items.postdate}}</div>
@@ -277,7 +279,7 @@ Prayu: An E-Pharmacy & Consulting Service
 					<h2 class="h4"><a href="#">Hospitals</h2></a>
                   <div class="category">Search for top Hospitals near by you</div>
                 </header>
-                <p>without showing their identity to the world. This websites give you a platform to write a blog on different different topic and share t</p>
+                <p>Find the best hospiatals near your city and get full details of that hospiatls online... like how many specialities doctors available, 24x7 Emergencies servie and ambulance service.</p>
                 <footer class="post-footer d-flex align-items-center"><a href="#" class="author d-flex align-items-center flex-wrap">
                     <div class="title"><span>Publish Date</span></div></a>
                   <div class="date"><i class="icon-clock"></i>{{items.postdate}}</div>
