--- a/Prayu/users/templates/users/doctors.html
+++ b/Prayu/users/templates/users/doctors.html
@@ -1,7 +1,114 @@
 {% extends 'users/basic.html' %}
+{% block cdn %}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+{% endblock %}
+{% block css %}
+.searchbar{
+margin-bottom: auto;
+margin-top: auto;
+height: 60px;
+background-color: black;
+border-radius: 30px;
+padding: 10px;
+}
+.search_input{
+color: white;
+border: 0;
+outline: 0;
+background: none;
+width: 0;
+caret-color:transparent;
+line-height: 40px;
+transition: width 0.4s linear;
+}
+.searchbar:hover > .search_input{
+padding: 0 10px;
+width: 450px;
+caret-color:red;
+transition: width 0.4s linear;
+}
+.searchbar:hover > .search_icon{
+background: white;
+color: #e74c3c;
+}
+.search_icon{
+height: 40px;
+width: 40px;
+float: right;
+display: flex;
+justify-content: center;
+align-items: center;
+border-radius: 50%;
+color:white;
+#srch_opt
+{
+color:white;
+font-color:white;
+}
+{% endblock %}
 {% block body %}
-hi
-{% for product in Product %}
-hello {{product.0.category}}
-{% endfor %}
+<div class="container">
+    <!-- Search nav bar -->
+    <div class="container h-100 mt-4 mb-4">
+        <div class="d-flex justify-content-center h-100">
+            <div class="searchbar">
+                <span id="srch_opt" class="mr-4 ml-4"> <a class="nav-link" href="/users/contact" style="color: white;">All</a></span>
+                <span id="srch_opt" class="mr-5">
+                    <li class="nav-link dropdown">
+                        <a class="nav-link dropdown-toggle mt-n4" style="color: white;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Specialities
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="">Gynecologist</a>
+                            <a class="dropdown-item" href="/ptech/allablog">General Physician</a>
+                            <a class="dropdown-item" href="/ptech/allablog">Orthopedician</a>
+                            <a class="dropdown-item" href="/ptech/allablog">Dietitian</a>
+                            <a class="dropdown-item" href="/ptech/allablog">Pediatrician</a>
+                            <a class="dropdown-item" href="/ptech/allablog">Dermatologist</a>
+                            <a class="dropdown-item" href="/ptech/allablog">Psychiatrist</a>
+                            <a class="dropdown-item" href="/ptech/allablog">Andrologist</a>
+                            <a class="dropdown-item" href="/ptech/allablog">Urologist</a>
+                            <a class="dropdown-item" href="/ptech/allablog">General Surgeon</a>
+                            <a class="dropdown-item" href="/ptech/allablog">Dentist</a>
+                            <a class="dropdown-item" href="/ptech/allablog">Pulmonologist</a>
+                            <a class="dropdown-item" href="/ptech/allablog">Oncologist</a>
+                        </div>
+                    </li>
+                </span>
+                <input class="search_input" type="text" name="" placeholder="Search...">
+                <a href="#" class="search_icon"><i class="fa fa-search"></i></a>
+            </div>
+        </div>
+    </div>
+    <!-- Cards -->
+    <div class="col-md-12" style="background-color: #f8f8f8; border-radius: 10px">
+        <div class="row p-4 ">
+            {% for i in dprofile reversed %}
+            <div class="col-md-6">
+                <div class="card mb-3" style="box-shadow: 5px 5px grey">
+                    <div class="row no-gutters">
+                        <div class="col-md-4">
+                            <img src="{{i.image.url}}" class="card-img" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">{{i.full_name}}</h5>
+                                <strong><i class="fa fa-graduation-cap mr-3"></i>{{i.qualification}}</strong><br />
+                                <a href="#" class="link">{{i.specialities}}</a><br />
+                                <small><i class="fa fa-user-md mr-3"></i>{{i.yr_expr}} Years of Experiance</small><br />
+                                <a href="/users/doctorprofile/{{i.id}}"><button id="" class="btn btn-primary mt-2 mr-4">View Profile</button></a>
+                                <a href=""><button id="" class="btn btn-primary mt-2">Consult Now</button></a>
+                                <p class="card-text"><small class="text-muted"><i class="fa fa-map-marker mr-3"></i>{{i.full_address}}</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</div>
 {% endblock %}
