--- a/Prayu/users/templates/users/prodview.html
+++ b/Prayu/users/templates/users/prodview.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="container">
-    <div class="row my-4">
+    <div class="row my-4 p-5" style="background-color: #f8f8f8; border-radius: 10px;">
         <div class="col-md-4">
             <div class="row">
                 <img src="/media/{{product.image}}" width="200px" height="300px">
